# SimpleRender

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
.cache/clangd/index/: clamp.h.87EA3EF0E9D3BF7E.idx  error.h.D58C143D0A12F522.idx  init.h.9BFBAD3BC66F0D6D.idx  instance.c.C938EA1F6A908E7A.idx  log.h.D1E1A84D25A0FB9D.idx  main.c.B3831AFC57E16831.idx  misc.h.455165770BB9928B.idx  physical.c.54A3239828F902AF.idx  sqrt.h.942E533E13AFCA82.idx  swap.h.FD4F6EB9EB52BB69.idx  swapchain.c.AFA09C98F35B48BC.idx  util.h.38D95495AEEF6D3A.idx
include/core/: command.h  config.h  error.h  frame.h  init.h  log.h  memory.h  pipeline.h  texture.h  util.h
include/renderers/: fractal.h  multisprite.h  sheet.h  sprite.h  text.h  tile.h
lib/SimpleMath/: .gitignore  Makefile  README.md  TODO.md  doxygen_config
lib/SimpleMath/src/: mainpage.txt
renderers/: multisprite.c  sprite.c
renderers/fractal/: fractal.c
renderers/multispriteRenderer/: multisprite.c  multisprite.h
renderers/sheet/: sheet.c
renderers/sprite/: sprite.c
renderers/spriteRenderer/: sprite.c  sprite.h
renderers/text/: font.c  text.c
renderers/tile/: tile.c  tileset.c
resources/tilesets/: map.txt
shaders/: standard.frag  standard.vert
shaders/fractal/: fractal.frag  fractal.vert
shaders/fractal/julia/: fractal.frag  fractal.vert
shaders/fractal/mandel/: fractal.frag
shaders/fractal/manext/: fractal.frag
shaders/fractal/twostep/: fractal.frag
shaders/sheet/: sheet.frag  sheet.vert
shaders/sprite/: sprite.frag  sprite.vert
shaders/text/: text.frag  text.vert
shaders/tile/: tile.frag  tile.vert
src/: Makefile  Vulkan.h  cmake_install.cmake  command.h  config.h  error.h  frame.c  frame.h  framebuffer.h  imageviews.h  init.c  init.h  instance.h  log.h  logicaldevice.h  main.c  memory.h  optional.h  physicaldevice.h  pipeline.h  sprite.h  state.h  swap.h  swapchain.h  texture.h  uniform.h  util.h  vertex.h
src/command/: command.c
src/config/: descriptor.c  pipeconfig.c  renderpass.c  shader.c  vertex.c
src/frame/: frame.c
src/init/: framebuffer.h  imageviews.h  init.c  instance.c  instance.h  logicaldevice.h  physical.c  physicaldevice.h  pipeline.h
src/memory/: memory.c
src/pipeline/: pipeline.c  shader.c  swap.c
src/renderers/spriteRenderer/: sprite.c  (+1 more)
src/shaders/: standard.frag
src/sprite/: sprite.c
src/swap/: swapchain.c
src/texture/: texture.c
src/uniform/: uniform.c
src/vert/: buffer.c  types.h  vertex.c
src/vertex/: vertex.c
test/: battleship.c  cputest.c  fractaltest.c  multitest.c  sheettest.c  spritetest.c  texttest.c  tiletest.c
(+118 files in other folders)
