cmake_minimum_required(VERSION 3.10)

project(SimpleRender)

set(C_LD_FLAGS "-lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi -lm")
set(CMAKE_CXX_FLAGS "${C_LD_FLAGS} -MMD -MP -lm")

file(GLOB_RECURSE SRCS ./src/*.c ./renderers/*.c)
add_subdirectory(src)
add_library(SimpleRender STATIC ${SRCS} ${INC})
target_include_directories(SimpleRender PUBLIC ./include/renderers)
target_include_directories(SimpleRender PUBLIC ./include/core)
target_include_directories(SimpleRender PUBLIC ./lib)
target_include_directories(SimpleRender PUBLIC ./lib/SimpleMath/src/include)
target_include_directories(SimpleRender PUBLIC ./lib/SimpleMath/src/include/mat)
target_include_directories(SimpleRender PUBLIC ./lib/SimpleMath/src/include/vec)
target_include_directories(SimpleRender PUBLIC ./lib/SimpleMath/src/include/trig)


project(spritetest)
add_executable(spritetest ./test/spritetest.c)
target_link_libraries(spritetest SimpleRender)
target_link_libraries(spritetest vulkan)
target_link_libraries(spritetest glfw)
target_link_libraries(spritetest dl)
target_link_libraries(spritetest pthread)
target_link_libraries(spritetest X11)
target_link_libraries(spritetest Xxf86vm)
target_link_libraries(spritetest Xrandr)
target_link_libraries(spritetest Xi)
target_link_libraries(spritetest m)
target_include_directories(spritetest PUBLIC ./include/renderers)
target_include_directories(spritetest PUBLIC ./include/core)
target_include_directories(spritetest PUBLIC ./lib)
target_include_directories(spritetest PUBLIC ./lib/SimpleMath/src/include)
target_include_directories(spritetest PUBLIC ./lib/SimpleMath/src/include/mat)
target_include_directories(spritetest PUBLIC ./lib/SimpleMath/src/include/vec)
target_include_directories(spritetest PUBLIC ./lib/SimpleMath/src/include/trig)
